# lupin

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  library.md
examples/: cat.mkv  message.txt  out.mkv
src/: cli.rs  error.rs  file.rs  lib.rs  main.rs  operations.rs  output.rs
src/commands/: embed.rs  extract.rs  help.rs  mod.rs  version.rs
src/engines/: README.md  jpeg.rs  mkv.rs  mod.rs  pdf.rs  png.rs
