[package]
name = "lupin"
version = "0.0.0"
edition = "2024"
description = "A lightweight steganography tool for hiding binary data inside PDF files."
license = "Apache-2.0"
repository = "https://github.com/niclashedam/lupin"
homepage = "https://github.com/niclashedam/lupin"
documentation = "https://docs.rs/lupin"
readme = "README.md"
keywords = ["steganography", "pdf", "privacy", "cli"]
categories = ["command-line-utilities", "security"]
authors = ["Niclas Hedam"]
exclude = ["/examples"]

[dependencies]
base64 = "0.21"