[package]
name = "lupin"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "A blazing-fast, lightweight steganography tool for concealing secret data within normal files."
license = "Apache-2.0"
repository = "https://github.com/niclashedam/lupin"
homepage = "https://github.com/niclashedam/lupin"
documentation = "https://docs.rs/lupin"
readme = "README.md"
keywords = ["steganography", "pdf", "privacy", "cli", "security"]
categories = ["command-line-utilities", "cryptography"]
authors = ["Niclas Hedam <lupin@sl.hed.am>"]
exclude = ["/examples", "/target", "*.pdf"]

[[bin]]
name = "lupin"
path = "src/main.rs"

[lib]
name = "lupin"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
simplelog = "0.12"
thiserror = "2"